<resources>
    <string name="app_name">Bambino</string>
    <string name="track">Track</string>
    <string name="home">Home</string>
    <string name="memories">Memories</string>
    <string name="open_calendar">Open calendar</string>
    <string name="open_settings">Open settings</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_name">Home</string>
    <string name="click_to_change_photo">Click to change photo</string>
    <string name="bath">Bath</string>
    <string name="sleep">Sleep</string>
    <string name="diaper">Diaper</string>
    <string name="eat">Eat</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="add_activity">Add activity</string>
    <string name="clear_all_data_from_today">Clear all data from today</string>
    <string name="change_date">Change date</string>
    <string name="example_time">Weekday MMM-dd-YYYY\' Time: \'HH:mm</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="add_memory">Add memory</string>
    <string name="add_new_memory">Add new memory</string>
    <string name="memory_image">Memory image</string>
    <string name="_12_30">12:30</string>
    <string name="experience_slider">Experience slider</string>
    <string name="provide_humour_level">Humour level:</string>
    <string name="add_new_action">Add new action</string>
    <string name="edit_memory_button">Edit memory button</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="example_action_description">Baby slept well</string>
    <string name="actions_record">Actions record</string>
    <string name="add_action">Add action</string>
    <string name="check_record">Check record</string>
    <string name="browse_diary">Browse diary</string>
    <string name="start_tracking_actions">Start tracking actions</string>
    <string name="capture_best_memories">Capture best memories</string>
    <string name="welcome_back_msg">Hi, it\'s good to have you back!</string>
    <string name="humour_5">Humour: 5</string>
    <string name="share_memory_button">Share memory button</string>
    <string name="track_your_child_s_weight">Track your child\'s weight</string>
    <string name="clear_data">Clear data</string>
    <string name="add_weight">Add weight</string>
    <string name="kid_eating_photo">Kid eating photo</string>
    <string name="mommy_making_photo">Mommy making photo</string>
    <string name="dot">.</string>
    <string name="kg">kg</string>
</resources>