<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bambino.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/trackFragment"
        android:name="com.example.bambino.TrackFragment"
        android:label="@string/track"
        tools:layout="@layout/fragment_track" />
    <fragment
        android:id="@+id/memoriesFragment"
        android:name="com.example.bambino.MemoriesFragment"
        android:label="@string/memories"
        tools:layout="@layout/fragment_memories" />
</navigation>