<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="memoryEntryViewModel"
            type="com.example.bambino.memoentry.MemoryEntryViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".memoentry.MemoryEntryFragment">

        <ImageView
            android:id="@+id/new_memory_photo"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:contentDescription="@string/click_to_change_photo"
            android:focusable="true"
            android:src="@drawable/ic_launcher_background"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memory_date_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_memory_photo"
            android:clickable="false"
            android:hint="@string/date"
            app:endIconContentDescription="Choose date from the calendar"
            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memory_description_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/memory_date_text_input"
            android:clickable="false"
            android:hint="@string/description"
            app:endIconContentDescription="Clear text"
            app:endIconDrawable="@drawable/ic_baseline_cancel_24"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_memory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/memory_description_text_input"
            android:layout_centerHorizontal="true"
            android:text="@string/add_memory" />

    </RelativeLayout>
</layout>