<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/weight_pickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/full_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:layout_toEndOf="@id/full_number"
            android:layout_centerInParent="true" />

        <NumberPicker
            android:id="@+id/decimal_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dot" />
        <TextView
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:layout_toEndOf="@id/decimal_number"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/measurement_date_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_pickers"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:hint="@string/date"
        android:inputType="date"
        app:endIconContentDescription="Choose date from the calendar"
        app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input_to_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>