<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trackViewModel"
            type="com.example.bambino.track.TrackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trackFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".track.TrackFragment">


        <Button
            android:id="@+id/add_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->trackViewModel.onNewAction()}"
            android:text="@string/add_new_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/change_date"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/change_date"
            android:layout_alignEnd="@id/add_activity_button"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_baseline_calendar_month_24"
            app:icon="@drawable/ic_baseline_calendar_month_24"
            app:layout_constraintBottom_toBottomOf="@+id/add_activity_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_activity_button"
            app:layout_constraintTop_toTopOf="@+id/add_activity_button" />

        <Button
            android:id="@+id/delete_all"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/clear_all_data_from_today"
            android:onClick="@{()->trackViewModel.clear()}"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:icon="@drawable/ic_baseline_delete_forever_24"
            app:layout_constraintBottom_toBottomOf="@+id/add_activity_button"
            app:layout_constraintEnd_toStartOf="@+id/add_activity_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_activity_button" />

        <TextView
            android:id="@+id/chosen_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_activity_button"
            android:text="@{trackViewModel.currentDayStr}"/>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actions_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_activity_button"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chosen_date_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>